chore: finalize i18n baseUrl, sitemap zeroRuntime, and content config
Set i18n baseUrl for hreflang links, enable zeroRuntime sitemap generation, add content collections config, and clarify German nav label to avoid link-text warnings.

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -1,6 +1,6 @@
 {
   "nav": {
-    "home": "Start",
+    "home": "Startseite",
     "about": "Ueber uns",
     "caseStudies": "Fallstudien",
     "blog": "Blog",
