--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -42,7 +42,7 @@
   "home": {
     "hero": {
       "eyebrow": "Bombig, digital agency",
-      "title": "Trust before conversion. We take responsibility for websites and digital projects.",
+      "title": "We take responsibility for your website",
       "description": "Placeholder: Briefly state who you are, what you stand for, and why teams hand over responsibility.",
       "primaryCta": "View services",
       "secondaryCta": "About us",
